<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/base_inputs"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/gray"
    android:orientation="vertical"
    tools:context=".activity.EscolherCidadeActivity">

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="260dp"
        android:layout_height="150dp"
        android:layout_gravity="center_horizontal"
        android:layout_margin="@dimen/padding"
        app:srcCompat="@drawable/logo_colorido" />

    <android.support.v7.widget.CardView xmlns:card_view="http://schemas.android.com/apk/res-auto"
        android:id="@+id/card_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginHorizontal="8dp"
        card_view:cardCornerRadius="4dp">

        <LinearLayout
            android:id="@+id/inputs"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:background="#FFF"
            android:orientation="vertical"
            android:paddingLeft="@dimen/fab_margin"
            android:paddingTop="@dimen/fab_margin_top"
            android:paddingRight="@dimen/fab_margin"
            android:paddingBottom="@dimen/fab_margin">

            <TextView
                android:id="@+id/textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginBottom="25dp"
                android:text="@string/escolha_cidade"
                android:textColor="@color/black_light"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textoEstado"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/estado"
                android:textColor="@color/gray_light"
                android:textSize="12sp" />

            <Spinner
                android:id="@+id/estado_spinner"
                style="@style/Widget.AppCompat.Spinner.Underlined"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:backgroundTint="@color/line"
                android:dropDownSelector="@color/gray"
                android:spinnerMode="dialog" />

            <TextView
                android:id="@+id/textoCidade"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/cidade"
                android:textColor="@color/gray_light"
                android:textSize="12sp" />

            <Spinner
                android:id="@+id/cidade_spinner"
                style="@style/Widget.AppCompat.Spinner.Underlined"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/line"
                android:dropDownSelector="@color/gray"
                android:spinnerMode="dialog" />

            <android.support.v7.widget.AppCompatButton
                android:id="@+id/btn_continuar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="10dp"
                android:text="@string/clube_continuar"
                android:theme="@style/BotaoPrimario" />

        </LinearLayout>
    </android.support.v7.widget.CardView>

</LinearLayout>