<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:fresco="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginLeft="8dp"
    android:layout_marginTop="4dp"
    android:layout_marginRight="8dp"
    android:layout_marginBottom="16dp"
    app:cardCornerRadius="10dp"
    app:cardElevation="3dp"
    app:cardMaxElevation="3dp"
    app:cardPreventCornerOverlap="true"
    app:cardUseCompatPadding="false">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingTop="@dimen/padding"
        android:paddingBottom="@dimen/padding">

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/text_nome_empresa_categoria"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="5dp"
                    android:paddingLeft="@dimen/fab_margin"
                    android:text="Empresa"
                    android:textColor="@color/text"
                    android:textSize="@dimen/text_title" />

                <TextView
                    android:id="@+id/text_endereco1_categoria"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingLeft="@dimen/fab_margin"
                    android:text="Endereço"
                    android:textColor="@color/text"
                    android:textSize="14sp" />

                <TextView
                    android:id="@+id/text_endereco2_categoria"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingLeft="@dimen/fab_margin"
                    android:text="Endereço"
                    android:textColor="@color/text"
                    android:textSize="14sp" />

                <TextView
                    android:id="@+id/text_endereco3_categoria"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="5dp"
                    android:paddingLeft="@dimen/fab_margin"
                    android:text="@string/endereco"
                    android:textColor="@color/text"
                    android:textSize="14sp" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/fab_margin"
                    android:layout_marginLeft="@dimen/fab_margin"
                    android:orientation="horizontal">

                    <ImageView
                        android:layout_width="14dp"
                        android:layout_height="14dp"
                        android:layout_gravity="center_vertical"
                        android:src="@drawable/ic_tags" />

                    <TextView
                        android:id="@+id/text_categoria"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:layout_marginStart="8dp"
                        android:layout_marginLeft="8dp"
                        android:gravity="center_vertical"
                        android:text="@string/categoria"
                        android:textColor="@color/text"
                        android:textSize="14sp"
                        android:textStyle="bold" />

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/layout_local"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/fab_margin"
                    android:layout_marginLeft="@dimen/fab_margin"
                    android:orientation="horizontal">

                    <ImageView
                        android:layout_width="14dp"
                        android:layout_height="14dp"
                        android:layout_gravity="center_vertical"
                        android:src="@drawable/ic_place" />

                    <TextView
                        android:id="@+id/text_localizacao"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:layout_marginStart="8dp"
                        android:layout_marginLeft="8dp"
                        android:gravity="center_vertical"
                        android:text="@string/distancia"
                        android:textColor="@color/text"
                        android:textSize="14sp"
                        android:textStyle="bold" />

                </LinearLayout>

            </LinearLayout>

            <com.facebook.drawee.view.SimpleDraweeView
                android:id="@+id/image_empresa_categoria"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_gravity="center_vertical"
                android:layout_margin="@dimen/activity_vertical_margin"
                android:scaleType="fitCenter"
                fresco:placeholderImage="@drawable/ic_image_default" />

        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/dimen_4dp"
            android:layout_marginBottom="@dimen/dimen_4dp"
            android:background="#eee" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center|center_vertical"
            android:layout_marginBottom="@dimen/dimen_4dp"
            android:orientation="horizontal">

            <android.support.v7.widget.AppCompatButton
                android:id="@+id/btn_detalhes_empresa"
                style="@style/Widget.AppCompat.Button.Borderless.Colored"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginLeft="8dp"
                android:layout_marginEnd="@dimen/fab_margin"
                android:layout_marginRight="@dimen/fab_margin"
                android:text="@string/saiba_mais" />

            <android.support.v7.widget.AppCompatButton
                android:id="@+id/btn_clubeVantagens_empresa"
                style="?android:attr/borderlessButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/button_bg_white_border"
                android:paddingLeft="16dp"
                android:paddingRight="16dp"
                android:text="@string/ver_vantagens"
                android:textColor="@color/red" />

        </LinearLayout>

    </LinearLayout>
</android.support.v7.widget.CardView>