<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragment.ContatoFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <android.support.v4.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/gray"
            android:fillViewport="false"
            android:scrollbars="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/dimen_8dp"
                    android:layout_marginBottom="@dimen/dimen_8dp"
                    android:paddingLeft="16dp"
                    android:paddingRight="16dp"
                    android:text="Contato"
                    android:textColor="@color/gray_light"
                    android:textSize="16sp"
                    android:textStyle="bold" />

                <android.support.v7.widget.CardView xmlns:card_view="http://schemas.android.com/apk/res-auto"
                    android:id="@+id/card_view_vantagens"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginLeft="8dp"
                    android:layout_marginRight="8dp"
                    android:layout_marginBottom="@dimen/margem_footer"
                    card_view:cardCornerRadius="4dp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                        <View
                            android:layout_width="match_parent"
                            android:layout_height="1dp"
                            android:layout_gravity="center"
                            android:layout_marginBottom="@dimen/espaco_bottom"
                            android:background="#eee" />

                        <android.support.design.widget.TextInputLayout
                            android:id="@+id/input_text_nome"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="@dimen/dimen_8dp">

                            <EditText
                                android:id="@+id/edt_nome"
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                android:layout_marginLeft="@dimen/margem_lateral"
                                android:layout_marginRight="@dimen/margem_lateral"
                                android:layout_marginBottom="@dimen/espaco_bottom"
                                android:hint="@string/clube_nome"
                                android:textSize="14sp" />
                        </android.support.design.widget.TextInputLayout>


                        <android.support.design.widget.TextInputLayout
                            android:id="@+id/input_text_celular"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content">

                            <EditText
                                android:id="@+id/edt_celular"
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                android:layout_marginLeft="@dimen/margem_lateral"
                                android:layout_marginRight="@dimen/margem_lateral"
                                android:layout_marginBottom="@dimen/espaco_bottom"
                                android:digits="0123456789"
                                android:hint="@string/clube_celular"
                                android:inputType="number|none"
                                android:maxLength="15"
                                android:textSize="14sp" />
                        </android.support.design.widget.TextInputLayout>

                        <android.support.design.widget.TextInputLayout
                            android:id="@+id/input_text_email"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content">

                            <EditText
                                android:id="@+id/edt_email"
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                android:layout_marginLeft="@dimen/margem_lateral"
                                android:layout_marginRight="@dimen/margem_lateral"
                                android:layout_marginBottom="@dimen/espaco_bottom"
                                android:hint="@string/clube_email"
                                android:inputType="textEmailAddress"
                                android:textSize="14sp" />
                        </android.support.design.widget.TextInputLayout>

                        <android.support.design.widget.TextInputLayout
                            android:id="@+id/input_text_assunto"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content">

                            <EditText
                                android:id="@+id/edt_assunto"
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                android:layout_marginLeft="@dimen/margem_lateral"
                                android:layout_marginRight="@dimen/margem_lateral"
                                android:layout_marginBottom="@dimen/espaco_bottom"
                                android:hint="Assunto"
                                android:textSize="14sp" />
                        </android.support.design.widget.TextInputLayout>

                        <android.support.design.widget.TextInputLayout
                            android:id="@+id/input_text_mensagem"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content">

                            <EditText
                                android:id="@+id/edt_mensagem"
                                android:layout_width="match_parent"
                                android:layout_height="110dp"
                                android:layout_marginLeft="@dimen/margem_lateral"
                                android:layout_marginRight="@dimen/margem_lateral"
                                android:layout_marginBottom="@dimen/espaco_bottom"
                                android:gravity="top"
                                android:hint="Mensagem"
                                android:inputType="text|textMultiLine"
                                android:maxLength="250"
                                android:textSize="14sp" />
                        </android.support.design.widget.TextInputLayout>

                    </LinearLayout>


                </android.support.v7.widget.CardView>

                <android.support.v7.widget.AppCompatButton
                    android:id="@+id/btn_enviar_contato"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginBottom="10dp"
                    android:text="@string/salvar"
                    android:theme="@style/BotaoPrimario" />

            </LinearLayout>
        </android.support.v4.widget.NestedScrollView>
    </LinearLayout>

</FrameLayout>